--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -1,96 +1,112 @@
-.nav{
-    width:100%;
+.nav {
+    width: 100%;
     background: #0E0E0E;
-    padding:0 100px;
-   
+    padding: 0 100px;
 }
-.inner{
+
+.inner {
     display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 96px;
-        border-bottom: 1px solid rgba(255,255,255,0.2);
+    justify-content: space-between;
+    align-items: center;
+    height: 96px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 
 }
-.links{
-    display:flex;
-    gap:34px;
+
+.links {
+    display: flex;
+    gap: 34px;
 }
 
-.link{
-    color:white;
+.link {
+    color: white;
     font-size: 13px;
-        font-weight: 700;
-        line-height: 25px;
-        
-        letter-spacing: 2px;
-        text-transform: uppercase;
-}
-.menu,.close{
-    display:none;
+    font-weight: 700;
+    line-height: 25px;
+
+    letter-spacing: 2px;
+    text-transform: uppercase;
 }
 
-.link:hover,.menu:hover,.close:hover,.cart:hover {
+.menu,
+.close {
+    display: none;
+}
+
+.link:hover,
+.menu:hover,
+.close:hover,
+.cart:hover {
     color: #D87D4A;
     cursor: pointer;
 }
 
 @media (max-width:880px) {
     .nav {
-            padding: 0 50px;
-    
-        }
+        padding: 0 50px;
+
+    }
 }
+
 @media (max-width:768px) {
     .nav {
         padding: 0 39px;
 
     }
 }
+
 @media (max-width:760px) {
-    
-        .menu,.close{
-            display: block;
-        }
-    .menulogo{
-        display:flex;
-        gap:42px;
+
+    .menu,
+    .close {
+        display: block;
     }
-        .inner {
-            height: 89px;
-    
-        }
-    
-        .links {
-            display: flex;
-            flex-direction:column;
-            gap: 10px;
-            padding-top:40px;
-        }
-        .hide{
-            display:none;
-        }
-        .linkwrap{
-            background: #0E0E0E;
-            position:absolute;
-            left:0;
-            top:0;
-            bottom:0;
-            height:100%;
-            width:50%;
-            padding-top:20px;
-            z-index:999;
-            box-shadow: 0px 2px 2px rgb(133, 123, 123);
-        }
-        .close{
-            position:absolute;
-            right:20px;
-            padding-bottom:30px;
-        }
-    
-       
+
+    .menulogo {
+        display: flex;
+        gap: 42px;
+    }
+
+    .inner {
+        height: 89px;
+
+    }
+
+    .links {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding-top: 40px;
+    }
+
+    .hide {
+        display: none;
+    }
+
+    .linkwrap {
+        background: #0E0E0E;
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        height: 100%;
+        width: 50%;
+        padding-top: 20px;
+        z-index: 999;
+        box-shadow: 0px 2px 2px rgb(133, 123, 123);
+    }
+
+    .close {
+        position: absolute;
+        right: 20px;
+        padding-bottom: 30px;
+    }
+
+
 }
-@media (max-width:375px){
-.linkwrap {
-    width:100%;}
+
+@media (max-width:375px) {
+    .linkwrap {
+        width: 100%;
+    }
 }
