--- a/src/components/parts/home/threecat/ThreeCat.css
+++ b/src/components/parts/home/threecat/ThreeCat.css
@@ -1,22 +1,88 @@
 .threecat{
     display:flex;
-    gap:30px;
+    justify-content: space-between;
+    width:1110px;
     height:284px;
-    margin-top:100px;
+    margin:200px auto 168px;
 }
 .threecat .p{
-    width: 350px;
+    width: 32%;
         height: 204px;
         border-radius: 8px;
             background-color: #F1F1F1;
+            position:relative;
+}
+.p .cat1im{
+    background-image: url('../../../../assets/shared/desktop/image-category-thumbnail-headphones.png');  
+}
+.p .cat2im {
+    background-image: url('../../../../assets/shared/desktop/image-category-thumbnail-speakers.png');
+}
+.p .cat3im {
+    background-image: url('../../../../assets/shared/desktop/image-category-thumbnail-earphones.png');
 }
 .p .pimg{
+    /* background-size: cover;
+        background-position: center; */
     transform: translateY(-45%);
     height:260px;
 }
 .p h3{
-    transform: translateY(-550%);
+    padding-bottom:15px;
+    color: #000;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 700;
+        letter-spacing: 1.286px;
+        text-transform: uppercase;
 }
 .alink{
-    transform: translateY(-50%);
+    position:absolute;
+    bottom:30px;
+    right:50%;
+    transform: translateX(50%);
+}
+
+@media (max-width:1150px) {
+    .threecat {
+        width: 100%;
+    }
+}
+@media (max-width:768px) {
+    .threecat {
+            height: 239px;
+            margin: 160px auto 96px;
+        }
+    
+        .threecat .p {   
+            height: 165px;        
+        }
+    
+        .p .pimg {
+            height: 160px;
+        }
+    
+    
+        .alink {
+            bottom: 22px;
+        }
+}
+@media (max-width:475px) {
+    .threecat {
+        flex-direction: column;
+        gap:98px;
+        align-items: center;
+            width: 100%;
+            height: auto;
+            margin: 140px auto 108px;
+        }
+    
+        .threecat .p {
+            width: 100%;
+        }
+}
+@media (max-width:375px) {
+    .threecat {
+        width: 327px;
+    }
 }
