--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,5 +1,11 @@
+.home{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
 .homehead{
     height:632px;
+    width:100%;
     background-image: url("../../assets/home/desktop/image-hero.jpg");
     background-repeat: no-repeat;
     background-position: bottom center;
