--- a/src/pages/list/list.css
+++ b/src/pages/list/list.css
@@ -14,3 +14,76 @@
   letter-spacing: 1.429px;
   text-transform: uppercase;
 }
+
+.cat-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 160px 100px;
+}
+
+.product-list {
+  display: flex;
+  flex-direction: column;
+  gap: 160px;
+}
+
+.preview {
+  /* width: 1110px; */
+  height: 560px;
+  display: flex;
+  gap: 125px;
+}
+
+.preview img {
+  width: 540px;
+  height: 560px;
+  border-radius: 8px;
+  background: #F1F1F1;
+}
+
+
+.info {
+  margin: auto 0;
+  text-align: start;
+  width: 445px;
+  height: 343px;
+}
+
+.np {
+  color: #D87D4A;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+}
+
+.title {
+  margin: 16px 0 32px;
+  color: #000;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 44px;
+  letter-spacing: 1.429px;
+  text-transform: uppercase;
+}
+
+.pr-desc {
+  margin-bottom: 40px;
+  color: #000;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 25px;
+}
+
+@media (max-width:880px) {
+  .preview {
+    gap: 100px;
+  }
+}
+
+@media (max-width:768px) {}
+
+@media (max-width:760px) {}
+
+@media (max-width:375px) {}
