--- a/src/components/parts/home/threecat/ThreeCat.css
+++ b/src/components/parts/home/threecat/ThreeCat.css
@@ -42,6 +42,17 @@
     right:50%;
     transform: translateX(50%);
 }
+.alink a{
+    color: #000;
+        font-size: 13px;
+        font-weight: 700;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        opacity: 0.5;
+}
+.alink a:hover{
+    color: #D87D4A;
+}
 
 @media (max-width:1150px) {
     .threecat {
