--- a/src/pages/list/list.css
+++ b/src/pages/list/list.css
@@ -19,7 +19,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 160px 100px;
+  padding: 160px 100px 0;
+  margin-bottom: 240px;
 }
 
 .product-list {
@@ -29,25 +30,32 @@
 }
 
 .preview {
-  /* width: 1110px; */
-  height: 560px;
+  width: 1110px;
+  /* height: 560px; */
   display: flex;
-  gap: 125px;
+  justify-content: space-between;
 }
 
 .preview img {
-  width: 540px;
-  height: 560px;
+  width: 49%;
+  /* height: 100%; */
   border-radius: 8px;
   background: #F1F1F1;
 }
 
-
 .info {
   margin: auto 0;
   text-align: start;
-  width: 445px;
+  width: 40%;
   height: 343px;
+}
+
+.id1 .info {
+  order: 1;
+}
+
+.id1 .listcatim {
+  order: 2;
 }
 
 .np {
@@ -56,10 +64,11 @@
   font-weight: 400;
   letter-spacing: 10px;
   text-transform: uppercase;
+  margin-bottom: 16px;
 }
 
 .title {
-  margin: 16px 0 32px;
+  margin-bottom: 32px;
   color: #000;
   font-size: 40px;
   font-weight: 700;
@@ -71,30 +80,212 @@
 .pr-desc {
   margin-bottom: 40px;
   color: #000;
-  font-size: 15px; 
+  font-size: 15px;
   font-weight: 500;
   line-height: 25px;
 }
 
-.product-list a{
+.product-list a {
   color: #FFF;
-   
-}
-.id1 .info{
-  order:1;
-}
-.id1 .listcatim{
-  order:2;
 }
 
-@media (max-width:880px) {
+@media (max-width:1150px) {
   .preview {
-    gap: 100px;
+    width: 100%;
+  }
+
+  .np {
+    margin-bottom: 10px;
+  }
+
+  .title {
+    margin-bottom: 22px;
+  }
+
+  .pr-desc {
+    margin-bottom: 30px;
   }
 }
 
-@media (max-width:768px) {}
+@media (max-width:920px) {
+  .np {
+    font-size: 12px;
+    margin-bottom: 8px;
+  }
 
-@media (max-width:760px) {}
+  .title {
+    margin-bottom: 18px;
+    font-size: 30px;
+  }
 
-@media (max-width:375px) {}
+  .pr-desc {
+    margin-bottom: 25px;
+    font-size: 13px;
+  }
+
+  .product-list button {
+    width: 120px;
+    height: 38px;
+    font-size: 10px;
+  }
+}
+
+@media (max-width:850px) {
+  .info {
+    margin: auto 0;
+    height: 310px;
+  }
+
+  .np {
+    font-size: 10px;
+    margin-bottom: 8px;
+  }
+
+  .title {
+    margin-bottom: 16px;
+    font-size: 25px;
+    line-height: 30px;
+  }
+
+  .pr-desc {
+    margin-bottom: 20px;
+    font-size: 11px;
+  }
+
+  .product-list button {
+    width: 120px;
+    height: 38px;
+    font-size: 10px;
+  }
+}
+
+@media (max-width:768px) {
+  .cat-header {
+    height: 246px;
+    padding: 105px 0 97px;
+  }
+
+  .cat-content {
+    padding: 161px 39px 0;
+    margin-bottom: 120px;
+  }
+
+  .product-list {
+    gap: 120px;
+  }
+
+  .preview {
+    min-height: 671px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: unset;
+    gap: 52px;
+  }
+
+  .preview img {
+    width: 100%;
+    height: 53%;
+  }
+
+  .info {
+    margin: 0;
+    width: 83%;
+    height: 100%;
+    text-align: center;
+  }
+
+  .np {
+    font-size: 14px;
+  }
+
+  .title {
+    margin-bottom: 32px;
+    font-size: 40px;
+    line-height: 44px;
+    height: 29%;
+  }
+
+  .pr-desc {
+    margin-bottom: 24px;
+    font-size: 15px;
+  }
+
+  .product-list button {
+    width: 160px;
+    height: 48px;
+    font-size: 13px;
+  }
+
+  .id1 .listcatim {
+    order: 1;
+  }
+}
+
+@media (max-width:475px) {
+  .cat-header {
+    height: 102px;
+    padding: 32px 0;
+  }
+
+  .cat-header h1 {
+    font-size: 28px;
+    letter-spacing: 2px;
+  }
+
+  .cat-content {
+    padding: 64px 24px 0;
+    margin-bottom: 120px;
+  }
+
+  .product-list {
+    gap: 120px;
+  }
+
+  .preview {
+    min-height: 681px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: unset;
+    gap: 32px;
+  }
+
+  .preview img {
+    width: 100%;
+    height: 53%;
+  }
+
+  .info {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+
+  .np {
+    font-size: 14px;
+  }
+
+  .title {
+    margin-bottom: 24px;
+    font-size: 28px;
+    line-height: 32px;
+    letter-spacing: 1px;
+    height: 29%;
+  }
+
+  .pr-desc {
+    margin-bottom: 24px;
+    font-size: 15px;
+    line-height: 25px;
+  }
+
+  .product-list button {
+    width: 160px;
+    height: 48px;
+    font-size: 13px;
+  }
+
+  .id1 .listcatim {
+    order: 1;
+  }
+}
