--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,5 +1,5 @@
 
-.home{
+.home,.headdiv{
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -18,6 +18,7 @@
 .headdiv {
     width: 396px;
     height: 360px;
+    text-align:left;
 }
 
 .homenewp {
@@ -45,15 +46,15 @@
     font-size: 15px;
     font-weight: 500;
     line-height: 25px;
-    text-align: left;
     padding-bottom: 40px;
 }
 
-button {
+button{
     width: 160px;
     height: 48px;
     background: #D87D4A;
-    border: 0;
+    border: 0;}
+    button a{
     color: #FFF;
     font-size: 13px;
     font-weight: 700;
@@ -64,4 +65,47 @@ button {
 button:hover {
     background: #FBAF85;
     cursor: pointer;
+}
+
+@media (max-width:768px){
+.homehead {
+        height: 639px;
+        background-image: url("../../assets/home/tablet/image-header.jpg");
+        background-size: cover;
+        padding-top: 126px;
+        padding-left: 0px;
+    }
+
+    .headdiv {
+        margin:0 auto;
+        width: 379px;
+            height: 346px;
+        text-align: center;
+    }
+    .homedesc{
+        width: 349px;
+    }
+
+}
+@media (max-width:468px) {
+
+    
+        .headdiv h1 {
+            font-size: 36px;
+                line-height: 40px;
+                /* 111.111% */
+                letter-spacing: 1.286px;
+        }
+    
+        .homedesc {
+            width: 328px;
+        }
+}
+
+@media (max-width:375px) {
+    .homehead {
+        height: 510px;
+        background-image: url("../../assets/home/mobile/image-header.jpg");
+        padding-top: 108px;
+    }
 }
