--- a/src/components/parts/home/audioman/audioman.css
+++ b/src/components/parts/home/audioman/audioman.css
@@ -3,7 +3,7 @@
   gap: 13%;
   margin: 0 auto 160px;
   align-items: center;
-  width: 1110px;
+  /* width: 1110px; */
 }
 
 .audman {
@@ -43,9 +43,9 @@
 
 }
 
-@media (max-width:1150px) {
+@media (max-width:1200px) {
   .audiodiv {
-    width: 100%;
+    /* width: 100%; */
     gap: 10%;
   }
 
@@ -59,7 +59,7 @@
     flex-direction: column;
     gap: 63px;
     margin: 0 auto 120px;
-    width: 689px;
+    /* width: 689px; */
   }
 
   .audman {
@@ -82,16 +82,16 @@
 
 }
 
-@media (max-width:689px) {
+/* @media (max-width:689px) {
   .audiodiv {
     width: 100%;
   }
-}
+} */
 
 @media (max-width:375px) {
-  .audiodiv {
+  /* .audiodiv {
     width: 327px;
-  }
+  } */
 
   .audman {
     background-image: url('../../../../assets/shared/mobile/image-best-gear.jpg');
