--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -1,15 +1,5 @@
-.calkep{
-    height:auto;
-}
-.price{
-    color: #000;
-        font-size: 18px;
-        font-weight: 700;
-        letter-spacing: 1.286px;
-        text-transform: uppercase;
-        opacity:1;
-        padding-bottom:47px;
-}
+
+
 .goback{
     color: #000;
         font-size: 15px;
@@ -20,211 +10,16 @@
         padding-bottom: 56px;
         height:20px;
         text-align:left;
+        /* align-self:left; */
 }
 .product{
     padding-top:0;
     
 }
-.quant{
-    width: 120px;
-        height: 48px;
-        background: #F1F1F1;
-        margin-right:16px;
-        color: #000;
-            text-align: center;
-            font-size: 13px;
-            font-weight: 700;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            /* display:flex;
-            justify-content: space-around; */
-}
-.qcount{
-    padding:0px 20px;
-}
-.sign{
-    opacity: 0.4;
-    font-size: 16px;
-}
-.sign:hover{
-    cursor: pointer;
-}
-.quant:hover{
-    background:#F1F1F1;
-}
-
-.addcart{
-    color: #FFF;
-        text-align: center;
-        font-size: 13px;
-        font-weight: 700;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-}
-.features-box {
-    display: flex;
-    justify-content: space-between;
-    margin:160px 0;
-}
-@media(max-width:1150px){
-    .features-box {
-            max-width: 1110px;
-            width: auto;
-        }
-}
-h2 {
-    color: #000;
-    font-size: 32px;
-    font-weight: 700;
-    line-height: 36px;
-    letter-spacing: 1.143px;
-    text-transform: uppercase;
-}
-
-.features,
-.inbox {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
-    text-align: start;
-}
-
-.features {
-    width: 57%;
-}
-
-.inbox {
-    width: 32%;
-}
-
-.features p {
-    color: #000;
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 25px;
-    opacity: 0.5;
-}
-
-ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}
-
-li {
-    display: flex;
-    gap: 21px;
-}
-
-.quantity {
-    color: #D87D4A;
-    font-size: 15px;
-    font-weight: 700;
-    line-height: 25px;
-}
-
-.item {
-    color: #000;
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 25px;
-    opacity: 0.5;
-}
 
 
-/* .gallery{
-    display:grid;
-    grid-template-rows: 280px 280px;
-    grid-template-columns: 445px 635px;
-    gap:auto;
-}
-.pg1{
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-.pg2 {
-    grid-column: 1/2;
-    grid-row: 2/3;
-}
-.pg3 {
-    grid-column: 2/3;
-    grid-row: 1/3;
-} */
-:root{
-    --gap: 32px;
-}
-.gallery{
-    display:flex;
-    gap:var(--gap,3%);
-}
-.gallery img{
-    border-radius:8px;
-}
-#inner{
-    display:flex;
-    flex-direction: column;
-    gap:var(--gap);
-    width:40%;
-}
-#forim{
-    width:57%;
-}
 
-.features-box,.gallery {width: 1110px;}
-@media(max-width:1150px) {
-    .features-box {
-        max-width: 1110px;
-        width: auto;
-    }
-        
-        .gallery{
-            width:900px;
-        }
-}
-@media (max-width:768px) {
-    .features-box {
-        flex-direction: column;
-        gap: 120px;
-        margin: 120px 0 153px;
-    }
 
-    .features {
-        width: 100%;
-    }
-
-    .inbox {
-        flex-direction: row;
-        width: 81%;
-        gap: 11px;
-    }
-
-    .inbox h2 {
-        width: 61%;
-    }
-}
-
-@media (max-width:475px) {
-    .features-box {
-        gap: 88px;
-        margin: 88px 0;
-    }
-
-    h2 {
-        font-size: 24px;
-        letter-spacing: 0.857px;
-    }
-
-    .features,
-    .inbox {
-        width: 100%;
-        gap: 24px;
-    }
-
-    .inbox {
-        flex-direction: column;
-    }
-}
 
 @media (max-width:768px) {
 
