--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -33,7 +33,7 @@ h3 {
   text-transform: uppercase;
 }
 
-.cartheader h4 {
+.cart-header h4 {
   color: #000;
   font-size: 15px;
   font-weight: 500;
