--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -86,7 +86,6 @@ h3 {
 }
 
 .total {
-  margin-bottom: 24px;
   display: flex;
   justify-content: space-between;
 }
@@ -113,4 +112,5 @@ h3 {
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
+  margin-top: 24px;
 }
