--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -53,8 +53,7 @@ button{
     width: 160px;
     height: 48px;
     background: #D87D4A;
-    border: 0;}
-    button a{
+    border: 0;
     color: #FFF;
     font-size: 13px;
     font-weight: 700;
