--- a/src/components/parts/home/homepics/Homepics.css
+++ b/src/components/parts/home/homepics/Homepics.css
@@ -1,243 +1,222 @@
-
-.homepics{
-    /* width: 1110px; */
-    display:flex;
+.homepics {
+    display: flex;
     flex-direction: column;
-    gap:48px;
-    margin-bottom:200px;
+    gap: 48px;
+    margin-bottom: 200px;
 }
-.hdiv1{
+
+.hdiv1 {
     width: 100%;
     height: 560px;
     border-radius: 8px;
-        background: #D87D4A;
-        display:flex;
-        justify-content: space-around;
-        overflow:hidden;
-            background-image: url('../../../../assets/home/desktop/pattern-circles.svg');
-                background-repeat: no-repeat;
-                /* background-size: cover; */
-                background-position: top left -90%;
+    background: #d87d4a;
+    display: flex;
+    justify-content: space-around;
+    overflow: hidden;
+    background-image: url("../../../../assets/home/desktop/pattern-circles.svg");
+    background-repeat: no-repeat;
+    background-position: top left -90%;
 }
 
-.hdiv1im{
-    background-image: url('../../../../assets/home/desktop/image-speaker-zx9.png');
+.hdiv1im {
+    background-image: url("../../../../assets/home/desktop/image-speaker-zx9.png");
     background-repeat: no-repeat;
     background-size: cover;
-    width:409px;
+    width: 409px;
     height: 493px;
-    margin-top:96px;
+    margin-top: 96px;
 }
-.hdivtext{
-    width: 349px;
-    align-self:center;
-    text-align:left;
 
+.hdivtext {
+    width: 349px;
+    align-self: center;
+    text-align: left;
 }
-.hdivtext h1{
-color: #FFF;
+
+.hdivtext h1 {
+    color: #fff;
     font-size: 56px;
     font-weight: 700;
     line-height: 58px;
     letter-spacing: 2px;
     text-transform: uppercase;
 }
-.hdivtext p{
-padding-top:24px;
-color: #FFF;
+
+.hdivtext p {
+    padding-top: 24px;
+    color: #fff;
     font-size: 15px;
     font-weight: 500;
     line-height: 25px;
-    opacity:0.75;
-    /* 166.667% */
-}
-.seep{
-    width: 160px;
-        height: 48px;
-        border:0;
-        text-align:center;
-        color: #000;
-        
-            font-size: 13px;
-            font-weight: 700;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            margin-top:40px;
+    opacity: 0.75;
 }
 
-.seep.blb{
+.seep {
+    width: 160px;
+    height: 48px;
+    border: 0;
+    text-align: center;
+    color: #000;
+    font-size: 13px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-top: 40px;
+}
+
+.seep.blb {
     background: #000;
-    color: #FFF;
-}
-.seep.blb:hover{
-    background: #4C4C4C;
-    cursor: pointer;
-}
-.seep.trb{
-    border: 1px solid #000;
-    background: transparent;
-    
-}
-.seep.trb a{
-color: #000;
-}
-.seep.trb:hover{
-    background: #000;
-    cursor:pointer;
     color: #fff;
 }
-/* .seep.trb:hover a{
-    color:#fff;
-} */
+
+.seep.blb:hover {
+    background: #4c4c4c;
+    cursor: pointer;
+}
+
+.seep.trb {
+    border: 1px solid #000;
+    background: transparent;
+}
+
+.seep.trb a {
+    color: #000;
+}
+
+.seep.trb:hover {
+    background: #000;
+    cursor: pointer;
+    color: #fff;
+}
 
 .hdiv2 {
     width: 100%;
-    height:320px;
-    background-image: url('../../../../assets/home/desktop/image-speaker-zx7.jpg');
+    height: 320px;
+    background-image: url("../../../../assets/home/desktop/image-speaker-zx7.jpg");
     background-repeat: no-repeat;
     border-radius: 8px;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding-left:96px;
+    padding-left: 96px;
 }
-.hdiv2 h2,.hdiv3 h2{
+
+.hdiv2 h2,
+.hdiv3 h2 {
     color: #000;
-        font-size: 28px;
-        font-weight: 700;
-        letter-spacing: 2px;
-        text-transform: uppercase;
+    font-size: 28px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
 }
 
 .hdiv3 {
     width: 100%;
     height: 320px;
-    display:flex;
-    gap:4%;
-    
+    display: flex;
+    gap: 4%;
 }
-.hdiv3 .im{
-    background-image: url('../../../../assets/home/desktop/image-earphones-yx1.jpg');
+
+.hdiv3 .im {
+    background-image: url("../../../../assets/home/desktop/image-earphones-yx1.jpg");
     background-repeat: no-repeat;
-        background-size: cover;
-    /* width: 540px; */
-        height: 320px;
+    background-size: cover;
+    height: 320px;
 }
-.hdiv3 .im, .hdiv3d{
+
+.hdiv3 .im,
+.hdiv3d {
     border-radius: 8px;
-    width:48%;
+    width: 48%;
 }
-.hdiv3d{
-    /* width: 540px; */
-        height: 320px;
-        background: #F1F1F1;
-        /* padding-left:20px;
-        padding-top:95px; */
-        padding-left: 90px;
-        display:flex;
+
+.hdiv3d {
+    height: 320px;
+    background: #f1f1f1;
+    padding-left: 90px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+@media (max-width: 830px) {
+    .hdiv1 {
+        height: 720px;
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
-}
-
-/* @media (max-width:1150px){
-    .homepics {
-            width: 100%;}
-} */
-
-@media (max-width:830px) {
-    .hdiv1 {
-            height: 720px;
-            flex-direction:column;
-            justify-content: center;
-            align-items: center;
-            background-position: bottom center;
-        }
-    
-        .hdiv1im {
-            background-image: url('../../../../assets/home/tablet/image-speaker-zx9.png');
-            width: 197.212px;
-            height: 237px;
-            margin-top: 52px;
-        }
-    
-        .hdivtext {
-            margin-top:64px;
-            text-align: center;
-    
-        }      
-}
-
-@media (max-width:768px) {
-    /* .homepics {
-            width: 689px;
-        } */
-
-                .hdiv2 {
-                    background-image: url('../../../../assets/home/tablet/image-speaker-zx7.jpg');       
-                    padding-left: 62px;
-                }
-        
-       
-        
-                .hdiv3 .im {
-                    background-image: url('../../../../assets/home/tablet/image-earphones-yx1.jpg');
-          
-                }
-        
-        
-                .hdiv3d {
-            align-items: flex-start;
-                    padding-left: 41px;
-                }
-}
-/* @media (max-width:689px) {
-    .homepics {
-        width: 100%;
+        align-items: center;
+        background-position: bottom center;
     }
-} */
-
-@media (max-width:549px) {
-    .hdiv3 {
-            width: 100%;
-            flex-direction: column;
-            height:auto;
-            gap: 24px;
-    
-        }
-    
-        .hdiv3 .im {
-            background-position: center;
-            height: 200px;
-        }
-    
-        .hdiv3 .im,
-        .hdiv3d {
-            width: 100%;
-        }
-    
-        .hdiv3d {
-            /* width: 540px; */
-            height: 200px;
-            padding-left: 24px;
-        }
-}
-
-@media (max-width:375px) {
-    /* .homepics {
-        width:327px;} */
 
     .hdiv1im {
-            background-image: url('../../../../assets/home/mobile/image-speaker-zx9.png');}
+        background-image: url("../../../../assets/home/tablet/image-speaker-zx9.png");
+        width: 197.212px;
+        height: 237px;
+        margin-top: 52px;
+    }
+
+    .hdivtext {
+        margin-top: 64px;
+        text-align: center;
+    }
+}
+
+@media (max-width: 768px) {
     .hdiv2 {
-            background-image: url('../../../../assets/home/mobile/image-speaker-zx7.jpg');
-        
-        }
-    .hdiv3 .im{
-        background-image: url('../../../../assets/home/mobile/image-earphones-yx1.jpg');
-       }
-         .hdiv3d{
+        background-image: url("../../../../assets/home/tablet/image-speaker-zx7.jpg");
+        padding-left: 62px;
+    }
+
+    .hdiv3 .im {
+        background-image: url("../../../../assets/home/tablet/image-earphones-yx1.jpg");
+    }
+
+    .hdiv3d {
+        align-items: flex-start;
+        padding-left: 41px;
+    }
+}
+
+@media (max-width: 549px) {
+    .hdiv3 {
+        width: 100%;
+        flex-direction: column;
+        height: auto;
+        gap: 24px;
+    }
+
+    .hdiv3 .im {
+        background-position: center;
+        height: 200px;
+    }
+
+    .hdiv3 .im,
+    .hdiv3d {
+        width: 100%;
+    }
+
+    .hdiv3d {
+        height: 200px;
+        padding-left: 24px;
+    }
+}
+
+@media (max-width: 375px) {
+    .hdiv1im {
+        background-image: url("../../../../assets/home/mobile/image-speaker-zx9.png");
+    }
+
+    .hdiv2 {
+        background-image: url("../../../../assets/home/mobile/image-speaker-zx7.jpg");
+    }
+
+    .hdiv3 .im {
+        background-image: url("../../../../assets/home/mobile/image-earphones-yx1.jpg");
+    }
+
+    .hdiv3d {
         align-items: center;
-        padding-left:0;
+        padding-left: 0;
     }
-    }
+}
