--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -17,7 +17,7 @@
   text-align: start;
 }
 
-.check h1 {
+#h1 {
   font-size: 32px;
   font-weight: 700;
   line-height: 36px;
@@ -133,7 +133,7 @@ input[type="radio"] {
 
 .summary {
   width: 32%;
-  height:fit-content;
+  height: fit-content;
   border-radius: 8px;
   padding: 32px 33px;
   background-color: #FFF;
