--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -5,8 +5,7 @@
     padding-top: 79px;
     padding-bottom: 56px;
     height: 20px;
-    text-align: left;
-    /* align-self:left; */
+    /* align-self:flex-start; */
 }
 
 .goback:hover {
@@ -20,6 +19,5 @@
 @media (max-width:768px) {
     .goback {
         min-height: 20px;
-        padding-left: 20px;
     }
 }
